--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -1,169 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main/header.css">
+    <link rel="icon" href="/static/image/favicon.png">
     <title>헤더</title>
-    <style>
-        .header-box {
-            height: 4.5rem;
-            background-color: #fff;
-        }
-
-        .header-container {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            height: 3.625rem;
-            padding: 1rem;
-            margin: 0 auto;
-            text-align: center;
-            border-bottom: .0625rem solid #f2f2f2;
-        }
-
-        .header-section-box {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 50.625rem;
-            height: 100%;
-        }
-
-        .logo-box {
-            display: flex;
-            align-items: center;
-        }
-
-        .header-logo {
-            margin-top: 0.4rem;
-            height: 1.6875rem;
-        }
-
-        .header-menu-box {
-            display: flex;
-            margin: 0;
-        }
-
-        .header-menu-container {
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            font-weight: 500;
-            margin-left: 1.125rem;
-        }
-        
-        .header-login-join-button-box {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        .header-login-join-box {
-            display: flex;
-            justify-content: center;
-        }
-
-        .header-login-join-ul{
-            display: flex;
-            justify-content: center;
-            margin: 0;
-        }
-
-        .header-login-join-li {
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .header-login-join-li:last-child {
-            margin-left: 1.125rem;
-        }
-
-        .header-login-join-li a {
-            font-size: .875rem;
-        }
-
-        .header-distributor-join-button {
-            width: 6rem;
-            padding: .40625rem 0;
-            font-size: .875rem;
-            border-radius: 6px;
-            margin-left: 1rem;
-            cursor: pointer;
-            background-color: #00c7ae;
-            border-color: #00c7ae;
-        }
-
-        .header-distributor-join-button a {
-            font-weight: 500;
-            color: #fff;
-        }
-
-        .btn {
-            display: inline-block;
-            text-align: center;
-            vertical-align: middle;
-            user-select: none;
-            border: .0625rem solid transparent;
-            line-height: 1.5;
-        }
-
-        .header-mobile-box {
-            display: none;
-        }
-
-        @media (max-width: 768px) {
-            .header-login-join-button-box {
-                display: none;
-            }
-        
-            .header-web-menu-box {
-                display: none;
-            }
-
-            .header-mobile-box {
-                display: block;
-            }
-
-            .header-mobile-menu-icon-box {
-                justify-content: flex-start;
-            }
-
-            .header-mobile-menu-icon-box img {
-                vertical-align: middle;
-                width: 24px;
-            }
-            
-            .header-section-box {
-                justify-content: flex-start;
-            }
-
-            .logo-box {
-                margin-left: 1.525rem;
-            }
-        }
-
-    </style>
 </head>
 <body>
     <div class="header-box">
         <div class="header-container">
             <div class="header-section-box">
                 <div class="header-mobile-box">
-                    <div class="header-mobile-menu-icon-box">
-                        <img src="/static/image/menu-icon.png" alt="">
+                    <div class="header-mobile-menu-icon-box menu-open-btn">
+                        <img src="/static/image/menu-icon.png">
                     </div>
                 </div>
                 <div class="logo-box">
                     <div class="logo-container">
                         <a href="#">
                             <img class="header-logo" src="/static/image/logo.png">
-                        </a>   
+                        </a>
                     </div>
                     <div class="header-web-menu-box">
                         <nav>
@@ -175,7 +34,8 @@
                         </nav>
                     </div>
                 </div>
-                <div class="header-login-join-button-box">
+                <!-- 로그인 x -->
+                <div class="header-login-join-button-box no-login-status"  style="display: none;">
                     <div class="header-login-join-box">
                         <ul class="header-login-join-ul">
                             <li class="header-login-join-li"><a href="#"><span>로그인</span></a></li>
@@ -186,8 +46,118 @@
                         <a href="#">유통업체 가입</a>
                     </button>
                 </div>
+
+                <!-- 로그인 o -->
+                <div class="header-login-join-button-box login-status">
+                    <div class="header-login-join-box">
+                        <div>
+                            <ul class="header-login-join-ul">
+                                <li class="header-login-join-li"><a href="#"><span>쪽지</span></a></li>
+                            </ul>
+                        </div>
+                        <div class="header-message-bell-box">
+                            <button class="header-message-bell-button">
+                                <img src="/static/image/bell-icon.png">
+                            </button>
+                        </div>
+                        <div class="header-member-menu-box">
+                            <div class="header-member-menu-container">
+                                <div class="header-member-picture-box">
+                                    <div class="header-member-picture"></div>
+                                </div>
+                                <img class="header-member-picture-arrow"src="/static/image/down-arrow-icon.png">
+                            </div>
+                            <div class="header-member-menu-dropdown">
+                                <div class="header-member-info-box">
+                                    <h4 class="header-member-name">xxx 고객님</h4>
+                                </div>
+                                <ul class="header-member-login-menu-ul">
+                                    <li class="header-member-login-menu-li">
+                                        <div>쪽지함</div>
+                                    </li>
+                                    <li class="header-member-login-menu-li">
+                                        <div>마이페이지</div>
+                                    </li>
+                                </ul>
+                                <div class="header-logout-button-box">
+                                    <button>로그아웃</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="header-mobile-member-menu-box">
+                    <div class="header-mobile-member-menu-container member-menu-open">
+                        <div class="member-menu-header-box">
+                            <button class="member-menu-out-button">
+                                <img class="member-menu-out-button-img" src="/static/image/x-icon.png">
+                            </button>
+                        </div>
+                        <div class="member-menu-body-box">
+                            <!-- 로그인 x -->
+                            <div class="member-menu-login-box no-login-status" style="display: none;">
+                                <div class="no-login-box" >
+                                    <h4>로그인 해주세요</h4>
+                                    <p class="member-menu-login-button">로그인
+                                        <img src="/static/image/arrow-icon.png">
+                                    </p>
+                                </div>
+                            </div>
+
+                            <!-- 로그인 o -->
+                            <div class="member-menu-login-box login-status">
+                                <div class="no-login-box" style="display: none;">
+                                    <h4>로그인 해주세요</h4>
+                                    <p class="member-menu-login-button">로그인
+                                        <img src="/static/image/arrow-icon.png">
+                                    </p>
+                                </div>
+                                <div class="login-box">
+                                    <h4 class="name member-name distributor-name">
+                                        <h4 class="">xxx 고객님</h4>
+                                    </h4>
+                                    <p>안녕하세요</p>
+                                </div>
+                                <div class="member-profile-box">
+                                    <div class="member-profile-container">
+                                        <div class="member-profile"></div>
+                                    </div>
+                                </div>
+                                <div class="member-control-box">
+                                    <div class="member-control-container">
+                                        <div class="member-menu-logout-button-box menu-button-box">
+                                            <button class="member-menu-logout-button menu-button">
+                                                로그아웃
+                                            </button>
+                                        </div>
+                                        <div class="member-menu-message-button-box menu-button-box">
+                                            <button class="member-menu-logout-button menu-button">
+                                                쪽지함
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="member-menu-list-box">
+                                <ul class="member-menu-list-container login-status">
+                                    <li class="member-menu-list-li"><a href="#"><span>관심업체</span></a></li>
+                                    <li class="member-menu-list-li"><a href="#"><span>마이페이지</span></a></li>
+                                </ul>
+                                <ul class="member-menu-list-container">
+                                    <li class="member-menu-list-li"><a href="#"><span>유통업체 게시판</span></a></li>
+                                    <li class="member-menu-list-li"><a href="#"><span>자유 게시판</span></a></li>
+                                    <li class="member-menu-list-li"><a href="#"><span>문의 게시판</span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="member-menu-backgroud"></div>
+                </div>
             </div>
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="/static/js/main/header.js"></script>
 </html>
