login html css js upload

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="header-message-bell-box">
                             <button class="header-message-bell-button">
-                                <img src="/static/image/bell-icon.png">
+                                <img class="normal-bell" src="/static/image/bell-icon.png">
                             </button>
                         </div>
                         <div class="header-member-menu-box">
