--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -33,3 +33,42 @@ ul, li {
     padding: 0;
     list-style-type: none;
 }
+
+fieldset {
+    min-width: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+legend {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin-bottom: .5rem;
+    font-size: 1.5rem;
+    line-height: inherit;
+    color: inherit;
+    white-space: normal;
+}
+
+.box {
+    background: #fafafa;
+    text-size-adjust: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100%;
+}
+
+.container {
+    background-color: rgb(0, 199, 174);
+}
+
+
+.normal-bell{
+    filter: invert(54%) sepia(90%) saturate(346%) hue-rotate(115deg) brightness(92%) contrast(80%);
+}
+
+
