join html css upload

--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -14,7 +14,7 @@
         <div class="container">
 
             <div id="header"></div>
-            
+
             <div class="login-box">
                 <div class="login-container">
                     <div class="login-logo-box">
@@ -117,68 +117,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script>
-        $memberLogin = $(".member-login");
-        $distributorLogin = $(".distributor-login");
-        $selectMemberLoginButton = $(".select-member");
-        $selectDistributorLoginButton = $(".select-distributor");
-        $inputIdentification = $(".input-identification");
-        $inputPassword = $(".input-password");
-        $inputEmail = $(".input-email");
-        $idError = $(".id-error");
-        $emailError = $(".email-error");
-        $passwordError = $(".password-error");
-        
-        // 일반 로그인 버튼 클릭 
-        $selectMemberLoginButton.click((e) =>{
-            if(!$(e).hasClass("select-login-button-active")){
-                $selectMemberLoginButton.addClass("select-login-button-active");
-                $selectDistributorLoginButton.removeClass("select-login-button-active");
-                $memberLogin.show();
-                $distributorLogin.hide();
-            }
-        });
-        
-        // 유통업체 로그인 버튼
-        $selectDistributorLoginButton.click((e) =>{
-            if(!$(e).hasClass("select-login-button-active")){
-                $selectDistributorLoginButton.addClass("select-login-button-active");
-                $distributorLogin.show();
-                $memberLogin.hide();
-                $selectMemberLoginButton.removeClass("select-login-button-active");
-            }
-        });
-        
-        // 아이디 입력 확인
-        $inputIdentification.blur(() => {
-            if(!$inputIdentification.val()){
-                $idError.text("아이디를 입력해주세요.");
-                check[0] = false;
-            }else {
-                $idError.text("");
-                check[0] = true;
-            }
-        });
-
-        //  이메일 입력 확인
-        $inputEmail.blur(() => {
-            if(!$inputEmail.val()){
-                $emailError.text("이메일을 입력해주세요.");
-            }else {
-                $emailError.text("");
-            }
-        });
-
-        // 비밀번호 입력 확인
-        $inputPassword.each((i, e) => {
-            $(e).blur(() => {
-                if(!$(e).val()){
-                    $passwordError.eq(i).text("비밀번호를 입력해주세요.");
-                }else {
-                    $passwordError.eq(i).text("");
-                }
-            });
-        });
-       
-</script>
+<script src="/static/js/main/login.js"></script>
 </html>
