--- a/src/main/resources/templates/distributor/distributor-join.html
+++ b/src/main/resources/templates/distributor/distributor-join.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/join/join.css">
-    <link rel="icon" href="/static/image/favicon.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/join/join.css">
+    <link rel="icon" href="/image/favicon.png">
     <title>일반 사용자 - 회원가입</title>
 </head>
 
@@ -18,7 +18,7 @@
             <div class="join-box">
                 <div class="join-container">
                     <div class="join-logo-box">
-                        <img src="/static/image/logo.png">
+                        <img src="/image/logo.png">
                     </div>
                     <div class="join-input-box">
                         <form action="#">
