--- a/src/main/resources/templates/member/member-join.html
+++ b/src/main/resources/templates/member/member-join.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/join/join.css">
-    <link rel="icon" href="/static/image/favicon.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/join/join.css">
+    <link rel="icon" href="/image/favicon.png">
     <title>일반 사용자 - 회원가입</title>
 </head>
 
@@ -18,10 +18,10 @@
             <div class="join-box">
                 <div class="join-container">
                     <div class="join-logo-box">
-                        <img src="/static/image/logo.png">
+                        <img src="/image/logo.png">
                     </div>
                     <div class="join-input-box">
-                        <form action="#">
+                        <form action="/member/join" method="post" th:object="${memberVO}">
                             <div class="join-form-box">
 
                                 <div class="join-form-container">
@@ -29,7 +29,7 @@
                                         <legend class="input-title">이름</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="memberName"
-                                                placeholder="이름을 입력해주세요.">
+                                                placeholder="이름을 입력해주세요." th:field="*{memberName}">
                                             <div class="error-msg name-error"></div>
                                         </div>
                                     </fieldset>
@@ -40,7 +40,7 @@
                                         <legend class="input-title">닉네임</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="memberNickname"
-                                                placeholder="닉네임을 입력해주세요.">
+                                                placeholder="닉네임을 입력해주세요." th:field="*{memberNickname}">
                                             <div class="error-msg nickname-error"></div>
                                         </div>
                                     </fieldset>
@@ -51,7 +51,7 @@
                                         <legend class="input-title">아이디</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="memberIdentification"
-                                                placeholder="아이디를 입력해주세요.">
+                                                placeholder="아이디를 입력해주세요." th:field="*{memberNickname}">
                                             <div class="error-msg id-error"></div>
                                         </div>
                                     </fieldset>
@@ -62,7 +62,7 @@
                                         <legend class="input-title">비밀번호</legend>
                                         <div style="position:relative;">
                                             <input type="password" class="input-text input-password" name="memberPassword"
-                                                placeholder="영문+숫자 조합 8자리 이상 입력해주세요.">
+                                                placeholder="영문+숫자 조합 8자리 이상 입력해주세요." th:field="*{memberPassword}">
                                             <button class="sub-button">표시</button>
                                         </div>
                                         <div class="error-msg password-error"></div>
@@ -74,7 +74,7 @@
                                         <legend class="input-title">핸드폰 번호</legend>
                                         <div style="position:relative;">
                                             <input type="text" class="input-text input-phoneNumber" name="memberPhoneNumber"
-                                                placeholder="핸드폰 번호를 입력해주세요." maxlength="11">
+                                                placeholder="핸드폰 번호를 입력해주세요." maxlength="11" th:field="*{memberPhoneNumber}">
                                             <button class="sub-button">인증</button>
                                         </div>
                                         <div class="error-msg password-error"></div>
