--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/login/login.css">
-    <link rel="icon" href="/static/image/favicon.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/login/login.css">
+    <link rel="icon" href="/image/favicon.png">
     <title>로그인 화면</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
             <div class="login-box">
                 <div class="login-container">
                     <div class="login-logo-box">
-                        <img src="/static/image/logo.png">
+                        <img src="/image/logo.png">
                     </div>
                     <div class="login-input-box">
                         <div class="select-login-box">
@@ -95,7 +95,7 @@
 
                             <div class="login-form-container">
                                 <button class="oauth-button oauth-button-kakao">
-                                    <img src="/static/image/comment-bubble-icon.png">
+                                    <img src="/image/comment-bubble-icon.png">
                                     <p>카카오로 시작</p>
                                 </button>
                             </div>
@@ -117,5 +117,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="/static/js/main/login.js"></script>
+<script src="/js/main/login.js"></script>
 </html>
