--- a/src/main/resources/templates/member/member-join.html
+++ b/src/main/resources/templates/member/member-join.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +20,7 @@
                         <img src="/image/logo.png">
                     </div>
                     <div class="join-input-box">
-                        <form action="/member/join" method="post" th:object="${memberVO}">
+                        <form th:action="@{/member/join}" method="post" th:object="${memberVO}">
                             <div class="join-form-box">
 
                                 <div class="join-form-container">
@@ -51,7 +50,7 @@
                                         <legend class="input-title">아이디</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="memberIdentification"
-                                                placeholder="아이디를 입력해주세요." th:field="*{memberNickname}">
+                                                placeholder="아이디를 입력해주세요." th:field="*{memberIdentification}">
                                             <div class="error-msg id-error"></div>
                                         </div>
                                     </fieldset>
@@ -87,8 +86,8 @@
                                 </div>
 
                                 <div class="join-form-button-box">
-                                    <button class="join-button">회원가입</button>
-                                    <a href="#" class="distributor-join-a">유통업체로 가입하시나요?</a>
+                                    <button type="submit" class="join-button">회원가입</button>
+                                    <a href="/distributor/join" class="distributor-join-a">유통업체로 가입하시나요?</a>
                                 </div>
                             </div>
                         </form>
@@ -111,8 +110,28 @@
         $(e).blur(() => {
             if(!$(e).val()){
                 $errorMsg.eq(i).text(errorTexts[i]);
+                check[i] = false;
+
+                switch (i) {
+                    case 2 :
+                        break;
+                    case 3:
+                        break;
+                    case 4:
+                        break;
+                    case 5:
+                        break;
+                    case 6:
+                        break;
+                    case 7:
+                        break;
+                    case 8:
+                        break;
+                    case 9:
+                }
             }else {
                 $errorMsg.eq(i).text("");
+                check[i] = true;
             }
         });
     });
