--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -117,5 +117,14 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const memberJoinSuccess = urlParams.get('memberJoinSuccess');
+    if (memberJoinSuccess) {
+        if (memberJoinSuccess === 'true') {
+            alert("회원가입 성공");
+        }
+    }
+</script>
 <script src="/js/main/login.js"></script>
 </html>
